--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3'
+name: iams-backend
 services:
     laravel.test:
         build:
@@ -7,11 +8,13 @@ services:
             args:
                 WWWGROUP: '${WWWGROUP}'
         image: sail-8.2/app
+        container_name: IAMS_backend
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
+            # - 8000:8000
             - '${APP_PORT:-80}:80'
-            - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
+            # - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
         environment:
             WWWUSER: '${WWWUSER}'
             LARAVEL_SAIL: 1
@@ -26,7 +29,7 @@ services:
     pgsql:
         image: 'postgres:15'
         ports:
-            - '${FORWARD_DB_PORT:-5432}:5432'
+            - '${FORWARD_DB_PORT:-5433}:5432'
         environment:
             PGPASSWORD: '${DB_PASSWORD:-secret}'
             POSTGRES_DB: '${DB_DATABASE}'
@@ -48,6 +51,13 @@ services:
                 - '${DB_USERNAME}'
             retries: 3
             timeout: 5s
+    adminer:
+        image: adminer
+        container_name: adminer
+        ports:
+        - '8100:8080'
+        networks:
+        - sail
 networks:
     sail:
         driver: bridge
